[gd_scene load_steps=4 format=3 uid="uid://test_enemy_scene"]

[ext_resource type="Script" uid="uid://cjq2xj8hjvx7x" path="res://scripts/Enemy.gd" id="1_8k9qv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_enemy"]
radius = 0.3
height = 1.6

[sub_resource type="CapsuleMesh" id="CapsuleMesh_enemy"]
radius = 0.3
height = 1.6

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
script = ExtResource("1_8k9qv")

[node name="SkeletonModel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
mesh = SubResource("CapsuleMesh_enemy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_enemy")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
target_desired_distance = 2.0
path_max_distance = 3.0
avoidance_enabled = true

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_enemy")

[node name="HealthBar3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_timer_timeout"]
